# logseq-hybrid

./: .env.example  .gitignore  GEMINI.md  Makefile  README.md  README.quickstart.md  pyproject.toml  queue.json  requirements.txt
docs/: cli-design-list-pages.md  system-design-description.md  test-plan-list-pages.md
logseq_hybrid/: __init__.py  api_client.py  cli.py  fs_writer.py  indexer.py  reconciler.py  settings.py
tests/: conftest.py  test_cli.py  test_health.py  test_indexer.py
