[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "logseq-hybrid"
version = "0.1.0"
dependencies = [
    "requests>=2.31.0",
    "python-dotenv>=1.0.1",
    "typer>=0.12.3",
    "shellingham>=1.5.4",
]

[project.scripts]
logseq-hybrid = "logseq_hybrid.cli:main"
